[package]
name = "saras"
description = "Simple Async Rust Application Server"
authors = ["Sergei Minaev <i@zenux.ru>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "saras"
path = "src/main.rs"

[dependencies]
argon2 = "0.4"
async-executor = "1.8"
async-lock = "3.3"
async-net = "2.0"
base64 = "0.22.0"
bincode = "1.3"
chrono = "0.4"
clap = { version = "4.5.1", features = ["derive"] }
futures-lite = "2.2"
isahc = "1.7.2"
jsonschema = { version = "0.17", features = [], default-features=false }
once_cell = "1.19"
rand = "0.8"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
validator = { version = "0.15", features = ["derive"] }

urlmatch = { git = "https://github.com/SergeiMinaev/urlmatch" }
qpidfile = { version = "0.9.2", git = "https://github.com/SergeiMinaev/qpidfile.rs" }
miarh-saras-http = { git = "https://github.com/SergeiMinaev/miarh-saras-http" }
lpsql = { git = "https://github.com/SergeiMinaev/lpsql.rs" }
img-shrink = { git = "https://github.com/SergeiMinaev/img-shrink" }

#lpsql = { path = "/work/lpsql" }
#img-shrink = { path = "/work/img-shrink" }
